--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -18,6 +18,11 @@
             android:id="@+id/location"
             android:layout_marginBottom="10dp"
             android:onClick="ask" />
+        <Button android:id="@+id/btnViewAnimals"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="View Animals"
+            android:layout_marginTop="25dip"/>
     </LinearLayout>
 
 </RelativeLayout>
