--- a/app/src/main/res/layout/list_animal.xml
+++ b/app/src/main/res/layout/list_animal.xml
@@ -16,8 +16,7 @@
         android:id="@+id/Name"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="6dp"
-        android:paddingLeft="6dp"
+        android:padding="16dp"
         android:textSize="20dp"
         android:textStyle="bold" />
 
