Time in Events and ToDoList + beginning of alarm managers

--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -38,5 +38,9 @@
         android:id="@+id/events"
         android:icon="@drawable/ic_insert_invitation_black_24dp"
         android:title="Events" />
+    <item
+        android:id="@+id/toDoList"
+        android:icon="@drawable/ic_insert_invitation_black_24dp"
+        android:title="ToDoList" />
 </group>
 </menu>
