--- a/app/src/main/res/layout/activity_todo.xml
+++ b/app/src/main/res/layout/activity_todo.xml
@@ -45,6 +45,12 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content" />
 
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/clearBtn"
+                android:text="Clear To-Do List"/>
+
 
             <!-- The main content view where fragments are loaded -->
             <FrameLayout
