--- a/app/src/main/res/layout/list_animal.xml
+++ b/app/src/main/res/layout/list_animal.xml
@@ -4,20 +4,36 @@
     android:layout_height="wrap_content"
     android:orientation="vertical" >
 
-    <!-- Product id (pid) - will be HIDDEN - used to pass to other activity -->
-    <TextView
-        android:id="@+id/Animal_ID"
-        android:layout_width="fill_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="gone" />
+        android:id="@+id/lin1"
+        android:orientation="vertical">
 
-    <!-- Name Label -->
-    <TextView
-        android:id="@+id/Name"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:padding="16dp"
-        android:textSize="20dp"
-        android:textStyle="bold" />
+        <TextView
+            android:id="@+id/Animal_ID"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="10dp"
+            android:textSize="15dp"
+            android:visibility="gone"
+             />
+
+        <!-- Name Label -->
+        <TextView
+            android:id="@+id/Name"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:paddingRight="16dp"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp"
+            android:paddingLeft="16dp"
+            android:textSize="20dp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+    <!-- Product id (pid) - will be HIDDEN - used to pass to other activity -->
+
 
 </LinearLayout>
